<resources>
    <string name="app_name">Dậy nấu ăn ngon</string>

    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    // Navigation
    <string name="drawer_open">Mở</string>
    <string name="drawer_close">Đóng</string>

    // Menu
    <string name="require_food">Yêu cầu hướng dẫn nấu món gì?</string>
    <string name="category">Thể loại</string>
    <string name="my_kitchen">Bếp của tôi</string>
    <string name="rate_app">Đánh giá ứng dụng</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="information_app">Thông tin ứng dụng</string>
    <string name="more_app">Các ứng dụng khác</string>
    <string name="liked">Đã thích</string>
    <string name="saw">Đã xem</string>
    <string name="setting_notification">Nhận thông báo</string>
    <string name="other_feature">Tính năng khác</string>
    <string name="news">Tin tức</string>

    // action
    <string name="action_ok">OK</string>
    <string name="action_cancel">Hủy</string>
    <string name="action_my_profile">Tài khoản của tôi</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="action_sort_by_view">Sắp xếp theo lượt xem</string>
    <string name="action_sort_by_date">Sắp xếp theo ngày</string>

    // dialog
    <string name="title_dialog">Dậy nấu ăn ngon</string>
    <string name="waiting_message">Vui lòng đợi</string>

    // msg
    <string name="error_not_connect_to_internet">Vui lòng kiểm tra kết nối mạng của bạn.</string>
    <string name="msg_exit_app">Bạn có chắc chắn muốn thoát ứng dụng?</string>

    // Home screen
    <string name="title_menu_latest">Thực đơn mới nhất</string>
    <string name="title_food_latest">Món mới nhất</string>
    <string name="see_all">Xem tất cả</string>
    <string name="see_all_underline"><u>Xem tất cả</u></string>

    // Menu screen
    <string name="menu">Thực đơn</string>
    <string name="suggest_search">Gợi ý tìm kiếm</string>
    <string name="quantity_food">Số món</string>
    <string name="material_food">Nguyên liệu</string>
    <string name="level_difficult">Độ khó</string>

    // Food screen
    <string name="food">Món ăn</string>
    <string name="all">Tất cả</string>

    // Search screen
    <string name="keyword_hot">Từ khóa HOT</string>
    <string name="search_history">Lịch sử tìm kiếm</string>
    <string name="clear_all">Xóa tất cả</string>
    <string name="enter_keyword">Nhập từ khóa</string>

    <!-- for search result screen-->
    <string-array name="tabs_menu_and_food">
        <item>THỰC ĐƠN</item>
        <item>MÓN ĂN</item>
    </string-array>
</resources>
