<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/redAccent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/define_dimen_200">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <me.relex.circleindicator.CircleIndicator
                        android:id="@+id/indicator"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/define_dimen_30"
                        android:layout_alignParentBottom="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcvData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/define_dimen_20"
                android:layout_marginTop="@dimen/define_dimen_80"
                android:orientation="vertical"
                android:paddingLeft="@dimen/define_dimen_5">

                <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                    android:id="@+id/tvRequireFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/define_dimen_12"
                    android:text="@string/require_food"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/define_dimen_12"
                    android:layout_marginRight="@dimen/define_dimen_12"
                    android:background="@color/dividerColor" />

                <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/define_dimen_12"
                    android:text="@string/category"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_normal" />

                <com.dangtin.cookbook.ui.widget.views.NonScrollListView
                    android:id="@+id/lvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"></com.dangtin.cookbook.ui.widget.views.NonScrollListView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/define_dimen_12"
                    android:layout_marginRight="@dimen/define_dimen_12"
                    android:background="@color/dividerColor" />

                <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/define_dimen_12"
                    android:text="@string/my_kitchen"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_normal" />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/define_dimen_12"
                        android:src="@drawable/ic_favorite_border" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/tvQuantityCountLike"
                        android:layout_toRightOf="@+id/image_favorite"
                        android:padding="@dimen/define_dimen_12"
                        android:text="@string/liked"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:id="@+id/tvQuantityCountLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/define_dimen_16"
                        android:background="@drawable/bg_purple_shape_round_corner"
                        android:paddingBottom="@dimen/define_dimen_4"
                        android:paddingLeft="@dimen/define_dimen_16"
                        android:paddingRight="@dimen/define_dimen_16"
                        android:paddingTop="@dimen/define_dimen_4"
                        android:text="20"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xxsmall" />
                </RelativeLayout>

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/define_dimen_12"
                        android:src="@drawable/ic_visibility" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/tvQuantityCountView"
                        android:layout_toRightOf="@+id/image_visibility"
                        android:padding="@dimen/define_dimen_12"
                        android:text="@string/saw"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:id="@+id/tvQuantityCountView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/define_dimen_16"
                        android:background="@drawable/bg_green_shape_round_corner"
                        android:paddingBottom="@dimen/define_dimen_4"
                        android:paddingLeft="@dimen/define_dimen_16"
                        android:paddingRight="@dimen/define_dimen_16"
                        android:paddingTop="@dimen/define_dimen_4"
                        android:text="10"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xxsmall" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/define_dimen_12"
                    android:layout_marginRight="@dimen/define_dimen_12"
                    android:background="@color/dividerColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:src="@drawable/ic_rate_app" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_app"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:src="@drawable/ic_share_app" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_app"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:src="@drawable/ic_info_app" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/information_app"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/define_dimen_12">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/define_dimen_12"
                        android:src="@drawable/ic_more_app" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_app"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
