<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/define_dimen_56">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="@dimen/define_dimen_56"
            android:layout_height="@dimen/define_dimen_56"
            android:padding="@dimen/define_dimen_16"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_black" />

        <EditText
            android:id="@+id/edtKeyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/define_dimen_10"
            android:layout_toLeftOf="@+id/image_delete"
            android:layout_toRightOf="@+id/image_back"
            android:background="@color/transparent"
            android:focusable="true"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:hint="@string/enter_keyword"
            android:padding="@dimen/define_dimen_10"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/define_dimen_10"
            android:src="@drawable/ic_clear_black"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <com.dangtin.cookbook.ui.widget.textview.RobotoMediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/define_dimen_10"
                    android:layout_marginTop="@dimen/define_dimen_20"
                    android:text="@string/keyword_hot"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_small" />

                <com.wefika.flowlayout.FlowLayout
                    android:id="@+id/layout_keyword_hot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/define_dimen_10"
                    android:layout_marginLeft="@dimen/define_dimen_10"
                    android:layout_marginRight="@dimen/define_dimen_10"
                    android:layout_marginTop="@dimen/define_dimen_5" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/define_dimen_10"
                    android:layout_marginRight="@dimen/define_dimen_10"
                    android:layout_marginTop="@dimen/define_dimen_20">

                    <com.dangtin.cookbook.ui.widget.textview.RobotoMediumTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/tvClearAll"
                        android:text="@string/search_history"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_size_small" />

                    <com.dangtin.cookbook.ui.widget.textview.RobotoMediumTextView
                        android:id="@+id/tvClearAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/clear_all"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/text_size_small" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcvHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/define_dimen_20"
                    android:layout_marginLeft="@dimen/define_dimen_10"
                    android:layout_marginRight="@dimen/define_dimen_10"
                    android:layout_marginTop="@dimen/define_dimen_10" />

            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
